Fix for slider captions still being visible when certain combinations of hover effects etc. were used along with the no-captions option of the slider.

--- a/src/templates/slider/css/no-captions.css
+++ b/src/templates/slider/css/no-captions.css
@@ -54,7 +54,7 @@
 
 /* Next hide the caption itself */
 .fg-slider.fgs-no-captions .fg-caption {
-	display: none;
+	display: none !important;
 }
 
 /* Now make adjustments to the layout of the item itself to display the thumb more predominantly */
